--- a/NetcafForecast/pom.xml
+++ b/NetcafForecast/pom.xml
@@ -83,12 +83,6 @@
         </dependency>
 
         <!-- 部署到tomcat中需要使用 -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-tomcat</artifactId>
-            <version>1.5.1.RELEASE</version>
-            <!--<scope>provided</scope>-->
-        </dependency>
 
         <dependency>
             <groupId>javax.servlet</groupId>
@@ -111,7 +105,10 @@
             <version>1.16.14</version>
             <scope>provided</scope>
         </dependency>
-
+        <!--<dependency>-->
+            <!--<groupId>org.springframework.boot</groupId>-->
+            <!--<artifactId>spring-boot-starter-thymeleaf</artifactId>-->
+        <!--</dependency>-->
 
         <dependency>
             <groupId>javax.servlet</groupId>
