springboot tomcat启动模板工程 书写了台风数据抓取入库 测试成功

--- a/NetcafForecast/src/main/resources/application.yml
+++ b/NetcafForecast/src/main/resources/application.yml
@@ -16,9 +16,9 @@ mybatis:
 
 #Spring boot视图配置
 #http://127.0.0.1:8086/NCForecast/NCparse/readGribToSql
-spring.mvc.view:
-  prefix: /WEB-INF/jsp/
-  suffix: .jsp
+#spring.mvc.view:
+#  prefix: /WEB-INF/jsp/
+#  suffix: .jsp
 
 spring.thymeleaf.prefix: "classpath:/templates/"
 
