--- a/NetcafForecast/src/main/resources/application.yml
+++ b/NetcafForecast/src/main/resources/application.yml
@@ -27,3 +27,4 @@ spring.thymeleaf.prefix: "classpath:/templates/"
 custom:
   forecastData:  "D:\\2019\\ForecastData\\"
   type: "digui1"
+  xyfblstep: 10
