--- a/NetcafForecast/src/main/resources/application.yml
+++ b/NetcafForecast/src/main/resources/application.yml
@@ -6,10 +6,10 @@ spring:
   jmx:
     enabled: false
   datasource:
-    url: jdbc:sqlserver://111.198.29.34:3348;DatabaseName=Meteo_Hainan;integratedSecurity=false
+    url: jdbc:sqlserver://172.22.65.91:1433;DatabaseName=Meteo_Hainan;integratedSecurity=false
     driverClassName: com.microsoft.sqlserver.jdbc.SQLServerDriver
     username: sa
-    password: dclw@2019
+    password: QWer!@#$
 
 mybatis:
   mapper-locations: "classpath:mapper/*.xml"
@@ -25,6 +25,6 @@ spring.thymeleaf.prefix: "classpath:/templates/"
 
 #自定义数据目录
 custom:
-  forecastData:  "D:\\2019\\ForecastData\\"
+  forecastData:  "Z:\\ForecastData\\"
   type: "digui1"
   xyfblstep: 10
