wwd字段的nc解析测试成功

--- a/NetcafForecast/pom.xml
+++ b/NetcafForecast/pom.xml
@@ -162,20 +162,20 @@
                 </executions>
             </plugin>
 
-            <!--<plugin>-->
-                <!--<groupId>org.apache.maven.plugins</groupId>-->
-                <!--<artifactId>maven-compiler-plugin</artifactId>-->
-                <!--<version>3.6.0</version>-->
-                <!--<configuration>-->
-                    <!--<source>1.8</source>-->
-                    <!--<target>1.8</target>-->
-                    <!--<encoding>UTF-8</encoding>-->
-                    <!---->
-                    <!--<compilerArguments>-->
-                        <!--<extdirs>H:\2.code\gitspace\MeteoInfoJava\classes\artifacts\MeteoInfoLib_jar</extdirs>-->
-                    <!--</compilerArguments>-->
-                <!--</configuration>-->
-            <!--</plugin>-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.6.0</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                    <encoding>UTF-8</encoding>
+
+                    <compilerArguments>
+                        <extdirs>H:\2.code\gitspace\MeteoInfoJava\classes\artifacts\MeteoInfoLib_jar</extdirs>
+                    </compilerArguments>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
