wwd字段的nc解析测试成功 配置文件改为公司的本地库

--- a/NetcafForecast/src/main/resources/application.yml
+++ b/NetcafForecast/src/main/resources/application.yml
@@ -6,10 +6,10 @@ spring:
   jmx:
     enabled: false
   datasource:
-    url: jdbc:sqlserver://172.22.65.91:1433;DatabaseName=Meteo_Hainan;integratedSecurity=false
+    url: jdbc:sqlserver://111.198.29.34:3348;DatabaseName=Meteo_Hainan;integratedSecurity=false
     driverClassName: com.microsoft.sqlserver.jdbc.SQLServerDriver
     username: sa
-    password: QWer!@#$
+    password: dclw@2019
 
 mybatis:
   mapper-locations: "classpath:mapper/*.xml"
