wwd字段的nc解析测试成功 pom中引入第三方依赖编译配置 pom中引入第三方依赖打包到lib目录下配置

--- a/NetcafForecast/pom.xml
+++ b/NetcafForecast/pom.xml
@@ -176,6 +176,22 @@
                     </compilerArguments>
                 </configuration>
             </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <configuration>
+                    <webResources>
+                        <resource>
+                            <directory>H:\2.code\gitspace\MeteoInfoJava\classes\artifacts\MeteoInfoLib_jar</directory>
+                            <targetPath>WEB-INF/lib/</targetPath>
+                            <includes>
+                                <include>*.jar</include>
+                            </includes>
+                        </resource>
+                    </webResources>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
