1.同时解析两种类型文件 2.经纬度小数点保留两位 3.经纬度取值bug解决

--- a/NetcafForecast/src/main/resources/application.yml
+++ b/NetcafForecast/src/main/resources/application.yml
@@ -29,4 +29,4 @@ custom:
   forecastData: "D:\\2019\\ForecastData\\"
   type: "digui1"
   xyfblstep: 10
-  data-featrue: "WWD"
+  data-featrue: "WWD-EDA10"
