--- a/NetcafForecast/src/main/resources/application.yml
+++ b/NetcafForecast/src/main/resources/application.yml
@@ -24,9 +24,12 @@ spring.thymeleaf.prefix: "classpath:/templates/"
 
 
 #自定义数据目录
-#data-featrue 要解析的数据文件命中的预报要素
+#forecastData 包含预报数据的文件夹目录，服务所在的电脑如：D:\\2019\\ForecastData\\
+#type： realtime:取当天时间组装的文件夹目录，仅仅当天； | history:遍历读取历史数据，递归每一个
+#xyfblstep： i++xyfblstep 即代表步长
+#data-featrue 要解析的数据文件命中的预报要素，可以通过-连接 如：WWD-EDA10
 custom:
   forecastData: "D:\\2019\\ForecastData\\"
-  type: "digui1"
+  type: "realtime"
   xyfblstep: 1
   data-featrue: "WWD-EDA10"
