tomcat版本和内置tomcat均可运行 内置的有问题是 依赖的包没搜索到

--- a/NetcafForecast/src/main/resources/application.yml
+++ b/NetcafForecast/src/main/resources/application.yml
@@ -31,7 +31,7 @@ spring.thymeleaf.prefix: "classpath:/templates/"
 # bound 筛选区域，数组列表，支持多个点，必须是按顺序的点
 custom:
   forecastData: "D:\\2019\\ForecastData\\"
-  type: "history"
+  type: "realtime"
   xyfblstep: 1
   data-featrue: "WWD-EDA10"
   bound: "109.00,16.5;112.4,16.5;112.4,20;109.00,20"
