--- a/NetcafForecast/src/main/resources/application.yml
+++ b/NetcafForecast/src/main/resources/application.yml
@@ -6,10 +6,10 @@ spring:
   jmx:
     enabled: false
   datasource:
-    url: jdbc:sqlserver://111.198.29.34:3348;DatabaseName=Meteo_Hainan;integratedSecurity=false
+    url: jdbc:sqlserver://172.22.65.91:1433;DatabaseName=Meteo_Hainan;integratedSecurity=false
     driverClassName: com.microsoft.sqlserver.jdbc.SQLServerDriver
     username: sa
-    password: dclw@2019
+    password: QWer!@#$
 
 mybatis:
   mapper-locations: "classpath:mapper/*.xml"
@@ -26,13 +26,15 @@ spring.thymeleaf.prefix: "classpath:/templates/"
 #自定义数据目录
 #forecastData 包含预报数据的文件夹目录，服务所在的电脑如：D:\\2019\\ForecastData\\
 #type： realtime:取当天时间组装的文件夹目录，仅仅当天； | history:遍历读取历史数据，递归每一个
+# 当type值为history时候，需要指定起点目录
 #xyfblstep： i++xyfblstep 即代表步长
 #data-featrue 要解析的数据文件命中的预报要素，可以通过-连接 如：WWD-EDA10
 # bound 筛选区域，数组列表，支持多个点，必须是按顺序的点
 # points 按指定的点，获取数值信息；如果points不是空，则忽略bound，分辨率xyfblstep值，如果point为空，则按bound解析
 custom:
-  forecastData: "D:\\2019\\ForecastData\\"
-  type: "realtime"
+  forecastData: "Z:\\ForecastData\\"
+  type: "history"
+  start-folder: "20181001"
   xyfblstep: 1
   data-featrue: "WWD-EDA10"
   bound: "109.00,16.5;112.4,16.5;112.4,20;109.00,20"
